dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=brownied.1
endif

if ENABLE_QT
  dist_man1_MANS+=brownie-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=brownie-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=brownie-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=brownie-wallet.1
endif
endif
